--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,11 +87,13 @@
   }
 }
 
-  @layer base {
-    * {
-      @apply border-border;
-    }
-    body {
-      @apply bg-background text-foreground;
-    }
-  }
+  
+
+html,
+body,
+:root{
+    margin: 0;
+    padding: 0;
+    background-color: #1c1c1c;
+
+}
